Fix overflow if the compose form is resized

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Mastodon Bird UI by @rolle@mementomori.social
-   1.3.7rc4 */
+   1.3.7rc5 */
 
 /* CSS variables */
 :root {
@@ -572,6 +572,7 @@ a.status-card.compact .status-card__host {
   flex-grow: 1;
   height: 100vh;
   max-width: 350px;
+  overflow: visible;
   position: sticky;
   top: 0;
 }
